src/test/ui/error-codes/E0220.rs
trait Trait {
    type Bar;
}

type Foo = Trait<F=i32>; //~ ERROR E0220
                         //~| ERROR E0191
fn main() {
}
